package protocol;
enum AttribType{
	DTYPE_INVAILED = 0;
	DTYPE_INT8 = 1;
	DTYPE_INT16 = 2;
	DTYPE_INT32 = 3;
	DTYPE_INT64 = 4;
	DTYPE_STRING = 5;
	DTYPE_FLOAT = 6;
	DTYPE_STRUCT = 7;
	DTYPE_BLOB = 8;
};

enum ObjectType{
	OBJECT_TYPE_UNKNOWN = 0;
	OBJECT_TYPE_PLAYER = 1;
};

enum ErrorCode{
	ERROR_NO_ERROR = 0;
	ERROR_ACCOUNT_AUTHEN_FAILED = 1;
	ERROR_GET_ROLE_LIST_FAILED = 2;
	ERROR_DISTRIBUTE_LOGIC_FAILED = 3;
	ERROR_LOAD_PLAYER_FAILED = 4;
	ERROR_TOO_MUCH_ROLE = 5;
	ERROR_CREATE_ROLE_FAILED = 6;
	ERROR_SYSTEM_ERROR = 7;
};
