enum ClientMsgID{
	CLIENT_MSG_LOGIN_REQ = 1;
	CLIENT_MSG_SELECT_ROLE_REQ = 2;
	CLIENT_MSG_CREATE_ROLE_REQ = 3;
	CLIENT_MSG_ENTER_SCENE_REQ = 4;
	CLIENT_MSG_TEST = 5;
	CLIENT_MSG_GD_COMMAND = 6;
};

enum ServerMsgID{
	SERVER_MSG_LOGIN_RSP = 1;
	SERVER_MSG_SELECT_ROLE_RSP = 2;
	SERVER_MSG_CREATE_ROLE_RSP = 3;
	SERVER_MSG_ATTRIB_SYNC = 4;
	SERVER_MSG_NEW_ROLE_NOTIFY = 5;
	SERVER_MSG_REMOVE_ROLE_NOTIFY = 6;
	SERVER_MSG_GIVE_GATE_ADDRESS_RSP = 7;
	SERVER_MSG_NOTIFY_TICKET_INFO_RSP = 8;
	SERVER_MSG_GD_COMMAND_RSP = 9;
	
};